<resources>
    <string name="app_name">BasicExamples</string>
    <string name="taj_mahal_agra">Taj Mahal, Agra</string>
    <string name="_6_december_2021">6 December 2021</string>
    <string name="this_is_an_image_content_description">this is an image Content Description</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="reset">Reset</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="submit">Submit</string>
    <string name="id">Id</string>
    <string name="password">Password</string>
    <string name="enter_id">Enter Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="scheduled">SCHEDULED</string>
    <string name="flight_departing_in_5_days">FLIGHT DEPARTING IN 5 DAYS</string>
    <string name="pnr_kv9_432776">PNR: KV9/432776</string>
    <string name="this_is_a_vector_image">This is a vector image</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="john">John</string>
    <string name="doe">Doe</string>
    <string name="_35">35</string>
    <string name="m">M</string>
    <string name="del">DEL</string>
    <string name="nag">NAG</string>
    <string name="delhi">(DELHI)</string>
    <string name="nagpur">(NAGPUR)</string>
    <string name="flight_duration">FLIGHT DURATION</string>
    <string name="_7hr_45m_stopover">7hr 45m (Stopover)</string>
    <string name="indra_gandhi_international_airport_delhi">Indra Gandhi International Airport, Delhi</string>
    <string name="monday_19_december">Monday 19, December</string>
    <string name="gate">GATE</string>
    <string name="_10a">10A</string>
    <string name="_11_35_am">11:35 AM</string>
    <string name="departure_time">DEPARTURE TIME</string>
    <string name="terminal">TERMINAL</string>
    <string name="t3">T3</string>
    <string name="seat">SEAT</string>
    <string name="_11b">11B</string>
    <string name="flight_no">FLIGHT NUMBER</string>
    <string name="ky12">KY12</string>
    <string name="air">AIR</string>
    <string name="ai">AI</string>
    <string name="_2_pcs_14kg">2 pcs(14Kg)</string>
    <string name="more">MORE...</string>
    <string name="total_fare">TOTAL FARE</string>
    <string name="inr_7811_00">INR 7811.00</string>
    <string name="important_information">Important Information:</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu dictum varius duis at consectetur lorem donec massa. Senectus et netus et malesuada fames ac turpis. Vitae sapien pellentesque habitant morbi. Vel orci porta non pulvinar neque laoreet suspendisse interdum consectetur. Lectus sit amet est placerat. Amet massa vitae tortor condimentum lacinia quis vel eros donec. Egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Turpis egestas maecenas pharetra convallis posuere. Tincidunt ornare massa eget egestas purus. Natoque penatibus et magnis dis parturient. Eget mauris pharetra et ultrices. Pharetra vel turpis nunc eget lorem. Orci ac auctor augue mauris augue. Nibh sit amet commodo nulla facilisi nullam. Ut ornare lectus sit amet est placerat in egestas erat. Aliquam id diam maecenas ultricies mi eget mauris. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique. Diam ut venenatis tellus in. Et tortor at risus viverra adipiscing at in tellus integer. Elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at. Dui accumsan sit amet nulla facilisi. Consectetur libero id faucibus nisl tincidunt eget nullam non nisi. Duis at consectetur lorem donec massa sapien faucibus. Ut placerat orci nulla pellentesque dignissim enim. Consequat mauris nunc congue nisi vitae suscipit tellus mauris. Pellentesque diam volutpat commodo sed egestas. Diam quis enim lobortis scelerisque fermentum dui. Augue mauris augue neque gravida in fermentum et. Tellus rutrum tellus pellentesque eu tincidunt tortor. Mi quis hendrerit dolor magna eget est lorem ipsum dolor. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque. Ultrices dui sapien eget mi proin sed. Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Porta nibh venenatis cras sed. Enim sed faucibus turpis in eu mi bibendum neque egestas. Convallis posuere morbi leo urna molestie at elementum eu facilisis. Pellentesque dignissim enim sit amet venenatis urna cursus eget nunc. Id neque aliquam vestibulum morbi blandit cursus risus at. Convallis convallis tellus id interdum velit laoreet id donec. Faucibus purus in massa tempor nec feugiat nisl pretium fusce. Nisl suscipit adipiscing bibendum est ultricies integer quis. Massa placerat duis ultricies lacus sed turpis tincidunt. Risus at ultrices mi tempus. Ultricies tristique nulla aliquet enim. Et molestie ac feugiat sed lectus vestibulum mattis ullamcorper. Leo in vitae turpis massa sed elementum. Sollicitudin ac orci phasellus egestas tellus rutrum. Nisl nisi scelerisque eu ultrices vitae. Sit amet luctus venenatis lectus magna. Tempus egestas sed sed risus pretium quam. Tempor orci eu lobortis elementum nibh. Adipiscing diam donec adipiscing tristique risus nec feugiat. Scelerisque varius morbi enim nunc faucibus a pellentesque sit. Neque egestas congue quisque egestas diam in arcu cursus euismod. Non diam phasellus vestibulum lorem. Non odio euismod lacinia at quis. Sapien eget mi proin sed libero enim sed faucibus. Est sit amet facilisis magna etiam tempor orci eu lobortis. Non enim praesent elementum facilisis leo vel fringilla. A arcu cursus vitae congue mauris rhoncus. Amet nisl suscipit adipiscing bibendum est ultricies integer quis. In arcu cursus euismod quis viverra nibh. Proin sed libero enim sed faucibus turpis in. Habitant morbi tristique senectus et netus et malesuada. Odio ut sem nulla pharetra. Sociis natoque penatibus et magnis dis. Duis at consectetur lorem donec massa sapien faucibus et molestie. Tristique nulla aliquet enim tortor at auctor urna. Viverra mauris in aliquam sem. Eu lobortis elementum nibh tellus. Interdum velit laoreet id donec. Mauris in aliquam sem fringilla ut morbi tincidunt augue. Ipsum dolor sit amet consectetur adipiscing. A lacus vestibulum sed arcu non. Risus commodo viverra maecenas accumsan. Enim nulla aliquet porttitor lacus luctus. Est ante in nibh mauris cursus mattis molestie a iaculis. Commodo quis imperdiet massa tincidunt nunc pulvinar sapien et ligula. Aliquet eget sit amet tellus cras adipiscing. Viverra tellus in hac habitasse platea dictumst vestibulum rhoncus. Porta non pulvinar neque laoreet suspendisse interdum consectetur libero. Fermentum odio eu feugiat pretium nibh ipsum consequat nisl vel. Semper eget duis at tellus at urna condimentum mattis pellentesque. Mattis nunc sed blandit libero volutpat sed. Vel fringilla est ullamcorper eget nulla facilisi etiam dignissim. Eu lobortis elementum nibh tellus molestie nunc non. Interdum varius sit amet mattis vulputate. Praesent elementum facilisis leo vel fringilla est. Dolor morbi non arcu risus quis. Ullamcorper malesuada proin libero nunc consequat interdum. Ipsum faucibus vitae aliquet nec ullamcorper sit. Commodo sed egestas egestas fringilla phasellus faucibus. Nunc aliquet bibendum enim facilisis gravida neque convallis a. A iaculis at erat pellentesque adipiscing commodo elit. Non curabitur gravida arcu ac tortor dignissim convallis aenean. Nisl suscipit adipiscing bibendum est ultricies integer quis auctor. Ullamcorper eget nulla facilisi etiam dignissim diam. Lacinia at quis risus sed vulputate odio. Posuere morbi leo urna molestie at elementum eu facilisis. Nec nam aliquam sem et. Commodo ullamcorper a lacus vestibulum sed arcu non. Congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Consequat ac felis donec et odio pellentesque diam. Natoque penatibus et magnis dis parturient montes nascetur ridiculus mus. Porttitor lacus luctus accumsan tortor. Feugiat in ante metus dictum at. Turpis tincidunt id aliquet risus feugiat in ante metus. Fames ac turpis egestas maecenas pharetra convallis posuere morbi leo. Potenti nullam ac tortor vitae purus faucibus ornare. Ut faucibus pulvinar elementum integer enim. Id semper risus in hendrerit gravida rutrum quisque. Faucibus purus in massa tempor. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Mattis molestie a iaculis at erat pellentesque adipiscing. Tellus orci ac auctor augue mauris augue neque. Scelerisque viverra mauris in aliquam sem fringilla ut morbi tincidunt. Nisl purus in mollis nunc sed. Pretium viverra suspendisse potenti nullam ac tortor. Dictum varius duis at consectetur lorem donec massa. Nulla malesuada pellentesque elit eget gravida cum sociis. Vel turpis nunc eget lorem dolor sed viverra. Etiam non quam lacus suspendisse faucibus interdum posuere. Egestas quis ipsum suspendisse ultrices gravida dictum fusce ut.</string>
    <string name="question">Q%1$d. %2$s</string>
    <string name="score_result">You Scored %1$d out of %2$d</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_.">.</string>
    <string name="_equal">=</string>
    <string name="_clear">CLEAR</string>
    <string name="_divide">/</string>
    <string name="_multiply">*</string>
    <string name="_add">+</string>
    <string name="_subtract">-</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="alex_john_doe">Alex John Doe</string>
    <string name="alexajohndoe19">AlexaJohnDoe19</string>
    <string name="demo_strings">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor sed viverra ipsum nunc aliquet bibendum enim. In massa tempor nec feugiat. Nunc aliquet bibendum enim facilisis gravida. Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper. Amet luctus venenatis lectus magna fringilla. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. Egestas egestas fringilla phasellus faucibus scelerisque eleifend. Sagittis orci a scelerisque purus semper eget duis. Nulla pharetra diam sit amet nisl suscipit. Sed adipiscing diam donec adipiscing tristique risus nec feugiat in. Fusce ut placerat orci nulla. Pharetra vel turpis nunc eget lorem dolor. Tristique senectus et netus et malesuada.</string>
    <string name="order_total_rs_65000">Order Total: Rs 65000</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="price_rs_65000">Price: Rs 65000</string>
    <string name="qty_1">Qty: 1</string>
    <string name="checkout">CheckOut</string>
    <string name="this_is_an_shopping_image">this is an shopping image</string>
    <string name="this_is_an_image">This is an image</string>
    <string name="flight_terminal">FLIGHT TERMINAL</string>
    <string name="flight_n">FLIGHT NO.</string>
    <string name="gate_no">GATE NO.</string>
    <string name="wifi">wifi</string>
    <string name="food">food</string>
    <string name="electrical">electrical</string>
    <string name="suitcase">suitcase</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="e">E</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="alphabets">Alphabets</string>
</resources>