<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:textSize="48sp"
            android:text="@string/_0"
            android:padding="8dp"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textSize="32sp"/>
    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="horizontal"
       android:baselineAligned="false">
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:layout_weight="1"
           android:layout_marginStart="5dp"
           android:layout_marginEnd="5dp"
           android:weightSum="4">

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:text="@string/_7"
               android:textSize="20sp"
               android:backgroundTint="@color/accent_blue"
               tools:ignore="NestedWeights" />

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:backgroundTint="@color/accent_blue"
               android:text="@string/_4"
               android:textSize="20sp"/>

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:backgroundTint="@color/accent_blue"
               android:text="@string/_1"
               android:textSize="20sp"/>

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:backgroundTint="@color/accent_blue_sapphire"
               android:text="@string/_."
               android:textSize="30sp"
               tools:ignore="TextContrastCheck" />

       </LinearLayout>

       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:layout_marginEnd="5dp"
           android:layout_weight="1"
           android:weightSum="4">

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:text="@string/_8"
               android:textSize="20sp"
               android:backgroundTint="@color/accent_blue"
               tools:ignore="NestedWeights"
               />
           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:backgroundTint="@color/accent_blue"
               android:text="@string/_5"
               android:textSize="20sp"/>

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:backgroundTint="@color/accent_blue"
               android:text="@string/_2"
               android:textSize="20sp"/>

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:backgroundTint="@color/accent_blue"
               android:text="@string/_0"
               android:textSize="20sp"
               tools:ignore="DuplicateSpeakableTextCheck" />

       </LinearLayout>

       <LinearLayout
           android:layout_weight="1"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:layout_marginEnd="5dp"
           android:weightSum="4">

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:text="@string/_9"
               android:textSize="20sp"
               android:backgroundTint="@color/accent_blue"
               tools:ignore="NestedWeights" />

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:backgroundTint="@color/accent_blue"
               android:text="@string/_6"
               android:textSize="20sp"/>

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:backgroundTint="@color/accent_blue"
               android:text="@string/_3"
               android:textSize="20sp"/>

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:backgroundTint="@color/accent_blue_sapphire"
               android:text="@string/_equal"
               android:textSize="30sp"
               tools:ignore="TextContrastCheck" />

       </LinearLayout>

       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:layout_marginEnd="5dp"
           android:orientation="vertical">

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:backgroundTint="@color/accent_blue_sapphire"
               android:text="@string/_clear"
               android:textSize="15sp"
               tools:ignore="NestedWeights,TextContrastCheck" />

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:backgroundTint="@color/accent_blue_sapphire"
               android:text="@string/_divide"
               android:textSize="30sp"
               tools:ignore="NestedWeights,TextContrastCheck" />

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:backgroundTint="@color/accent_blue_sapphire"
               android:text="@string/_multiply"
               android:textSize="30sp"
               tools:ignore="NestedWeights,TextContrastCheck" />

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:backgroundTint="@color/accent_blue_sapphire"
               android:text="@string/_subtract"
               android:textSize="30sp"
               tools:ignore="NestedWeights,TextContrastCheck" />

           <Button
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:backgroundTint="@color/accent_blue_sapphire"
               android:text="@string/_add"
               android:textSize="30sp"
               tools:ignore="NestedWeights,TextContrastCheck" />

       </LinearLayout>
   </LinearLayout>
</LinearLayout>