<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/orange"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/blue"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/register"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/green"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/reset"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/sign_up"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@color/orange"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@color/white"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:background="@color/green"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/submit" />
    </LinearLayout>
</LinearLayout>